<resources>
    <string name="app_name">myTaxiRide</string>

    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="google_maps_key">AIzaSyD7Kr8C0E88uVzMQJEghVya-BXYpUoRaQ4</string>
    <string name="mytaxiride">myTaxiRide</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="logout">logout</string>
    <string name="ride_status">Ride Status</string>
    <string name="destination">Destination: --</string>
    <string name="picked_customer">picked customer</string>
    <string name="rover_ranger">Rover Ranger</string>
    <string name="ford">Ford</string>
    <string name="honda_city">Honda City</string>
    <string name="car">Car</string>

</resources>