<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    tools:context="com.example.blockchainmessaging.MainActivity">
    <item
    android:id="@+id/action_history"
    android:orderInCategory="1"
    android:title="@string/history"
    app:showAsAction="never"/>


    <item
        android:id="@+id/action_Settings"
        android:orderInCategory="3"
        android:title="@string/settings"


        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="5"
        android:title="@string/logout"
        app:showAsAction="never"
        />

<!--    <item-->
<!--        android:id="@+id/action_contact"-->
<!--        android:orderInCategory="100"-->

<!--        android:title="@string/action_contact" />-->

<!--    <item-->
<!--        android:id="@+id/action_order"-->

<!--        android:icon="@drawable/ic_shopping_cart"-->
<!--        android:orderInCategory="10"-->
<!--        android:title="@string/action_order"-->
<!--        app:showAsAction="always" />-->

<!--    <item-->
<!--        android:id="@+id/action_status"-->
<!--        android:icon="@drawable/ic_status_info"-->
<!--        android:orderInCategory="20"-->
<!--        android:title="Status"-->
<!--        app:showAsAction="always" />-->

<!--    <item-->
<!--        android:id="@+id/action_favorites"-->

<!--        android:icon="@drawable/ic_favorite"-->

<!--        android:orderInCategory="30"-->
<!--        android:title="Favorites"-->
<!--        app:showAsAction="ifRoom" />-->
</menu>