<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mytaxiride.CustomerSettingsActivity"
    android:orientation="vertical"
    android:padding="20sp">
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:id="@+id/profileImage"
        android:src="@mipmap/ic_default_user"
        android:layout_marginBottom="20sp"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="Name"
        android:layout_marginBottom="20sp"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="Phone"
        android:layout_marginBottom="20sp"
        android:inputType="number"/>
    <EditText
        android:id="@+id/car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/car"
        android:layout_marginBottom="20sp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/honda_city"
            android:id="@+id/UberX"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ford"
            android:id="@+id/UberBlack"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rover_ranger"
            android:id="@+id/UberXl"/>
    </RadioGroup>

    <Button
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm"
        android:text="confirm"
        android:background="@drawable/button_login_background"
        />
    <Button
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:text="back"
        android:background="@drawable/button_reg_background"/>

</LinearLayout>
