<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.mytaxiride.DriverMapActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rel_layout">
            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logout"
                android:text="@string/logout"
                android:background="@drawable/button_login_background"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/white"/>




        </RelativeLayout>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Working"
            android:layout_margin="10sp"
            android:id="@+id/workingSwitch"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/customerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:elevation="1dp"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:visibility="invisible"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/customerProfileImage"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:padding="20sp"
                android:src="@mipmap/ic_default_user" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40sp">

                <TextView
                    android:id="@+id/customerDestination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10sp"
                    android:text="@string/destination" />

                <TextView
                    android:id="@+id/customerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20sp"
                    android:paddingBottom="10sp" />

                <TextView
                    android:id="@+id/customerPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20sp"
                    android:paddingBottom="10sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/rideStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picked_customer"

            />


    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"

        >

        <Button


            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"

            android:layout_marginBottom="8dp"
            android:background="@drawable/button_reg_background"
            android:text="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:contentDescription="@string/history"
            android:gravity="end"
            android:src="@drawable/ic_baseline_payment_24"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

